switched to using sp for tf authentication

--- a/infrastructure/infr-pipeline.yml
+++ b/infrastructure/infr-pipeline.yml
@@ -28,9 +28,10 @@ stages:
             ./terraform init
           displayName: Terraform Initialize
           env:
-            ARM_USE_MSI: true
             ARM_TENANT_ID: 58a82b7b-bd43-4950-8699-bbaa5d0ff52b
             ARM_SUBSCRIPTION_ID: $(subscription_id)
+            ARM_CLIENT_ID: $(client_id)
+            ARM_CLIENT_SECRET: $(client_secret)
             ARM_ACCESS_KEY: $(backend_access_key)
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)         
 
@@ -43,9 +44,10 @@ stages:
             -var-file="terraform.tfvars"
           displayName: Terraform Plan
           env:
-            ARM_USE_MSI: true
             ARM_TENANT_ID: 58a82b7b-bd43-4950-8699-bbaa5d0ff52b
             ARM_SUBSCRIPTION_ID: $(subscription_id)
+            ARM_CLIENT_ID: $(client_id)
+            ARM_CLIENT_SECRET: $(client_secret)
             ARM_ACCESS_KEY: $(backend_access_key)
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)                       
 
@@ -73,9 +75,10 @@ stages:
             ./terraform init
           displayName: Terraform Initialize
           env:
-            ARM_USE_MSI: true
             ARM_TENANT_ID: 58a82b7b-bd43-4950-8699-bbaa5d0ff52b
             ARM_SUBSCRIPTION_ID: $(subscription_id)
+            ARM_CLIENT_ID: $(client_id)
+            ARM_CLIENT_SECRET: $(client_secret)
             ARM_ACCESS_KEY: $(backend_access_key)
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
 
@@ -88,8 +91,9 @@ stages:
             -var-file="terraform.tfvars"
           displayName: Terraform Apply
           env:
-            ARM_USE_MSI: true
             ARM_TENANT_ID: 58a82b7b-bd43-4950-8699-bbaa5d0ff52b
             ARM_SUBSCRIPTION_ID: $(subscription_id)
+            ARM_CLIENT_ID: $(client_id)
+            ARM_CLIENT_SECRET: $(client_secret)
             ARM_ACCESS_KEY: $(backend_access_key)
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)   
