--- a/infrastructure/infr-pipeline.yml
+++ b/infrastructure/infr-pipeline.yml
@@ -36,7 +36,8 @@ stages:
             ARM_SKIP_PROVIDER_REGISTRATION: $(tf_provider_registration)
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
-            TF_VAR_sql_admin_password: $(sql_admin_password)                
+            TF_VAR_sql_admin_password: $(sql_admin_password)
+            TF_VAR_connection_string_value: $(db_connection_string)              
 
         - script: |
             export TF_IN_AUTOMATION=true
@@ -55,7 +56,8 @@ stages:
             ARM_SKIP_PROVIDER_REGISTRATION: $(tf_provider_registration)
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
-            TF_VAR_sql_admin_password: $(sql_admin_password)                                   
+            TF_VAR_sql_admin_password: $(sql_admin_password)
+            TF_VAR_connection_string_value: $(db_connection_string)                                  
 
 - stage: TF_APPLY
   pool: 
@@ -89,7 +91,8 @@ stages:
             ARM_SKIP_PROVIDER_REGISTRATION: $(tf_provider_registration)
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
-            TF_VAR_sql_admin_password: $(sql_admin_password)             
+            TF_VAR_sql_admin_password: $(sql_admin_password)
+            TF_VAR_connection_string_value: $(db_connection_string)             
 
         - script: |
             export TF_IN_AUTOMATION=true
@@ -108,4 +111,5 @@ stages:
             ARM_SKIP_PROVIDER_REGISTRATION: $(tf_provider_registration)
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
-            TF_VAR_sql_admin_password: $(sql_admin_password)                
+            TF_VAR_sql_admin_password: $(sql_admin_password)
+            TF_VAR_connection_string_value: $(db_connection_string)                
