--- a/infrastructure/infr-pipeline.yml
+++ b/infrastructure/infr-pipeline.yml
@@ -13,6 +13,7 @@ stages:
     - job: Infrastructure_Terraform_Plan
       displayName: "Infrastructure Terraform Plan"
       steps:
+
         - script: |
             cd $(Build.Repository.LocalPath)/infrastructure
             pwd
@@ -37,7 +38,24 @@ stages:
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
             TF_VAR_sql_admin_password: $(sql_admin_password)
-            TF_VAR_connection_string_value: $(db_connection_string)              
+            TF_VAR_connection_string_value: $(db_connection_string)
+
+        - script: |
+            export TF_IN_AUTOMATION=true
+            cd $(Build.Repository.LocalPath)/infrastructure
+            ./terraform import -var-file="terraform.tfvars" module.vnet.azurerm_virtual_network.vnet /subscriptions/${SUBSCRIPTION_ID}/resourceGroups/ic/providers/Microsoft.Network/virtualNetworks/ic-skedda-vnet
+          displayName: Terraform Import vnet
+          env:
+            ARM_TENANT_ID: 58a82b7b-bd43-4950-8699-bbaa5d0ff52b
+            ARM_SUBSCRIPTION_ID: $(subscription_id)
+            ARM_CLIENT_ID: $(client_id)
+            ARM_CLIENT_SECRET: $(client_secret)
+            ARM_ACCESS_KEY: $(backend_access_key)
+            ARM_SKIP_PROVIDER_REGISTRATION: $(tf_provider_registration)
+            AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
+            TF_VAR_sql_admin_username: $(sql_admin_username)
+            TF_VAR_sql_admin_password: $(sql_admin_password)
+            TF_VAR_connection_string_value: $(db_connection_string)                           
 
         - script: |
             export TF_IN_AUTOMATION=true
@@ -69,6 +87,7 @@ stages:
       displayName: "Infrastructure Terraform Apply"
       timeoutInMinutes: 150
       steps:
+      
         - script: |
             cd $(Build.Repository.LocalPath)/infrastructure
             wget --quiet "https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip"
