--- a/app/app-pipeline.yml
+++ b/app/app-pipeline.yml
@@ -1,3 +1,6 @@
+trigger:
+  - app-deploy
+
 variables:
   buildConfiguration: 'Release'
 
@@ -14,6 +17,5 @@ steps:
   inputs:
     azureSubscription: 'ic-skedda'
     appType: 'webAppLinux'
-    appName: 'aspnetcoreapp'
+    appName: 'ikedotnetapp01'
     package: '$(System.DefaultWorkingDirectory)/app/aspnetcoreapp.zip'
-    appSettings: -DbConnectionString <db-connection-string>
