--- a/infrastructure/infr-pipeline.yml
+++ b/infrastructure/infr-pipeline.yml
@@ -38,7 +38,9 @@ stages:
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
             TF_VAR_sql_admin_password: $(sql_admin_password)
-            TF_VAR_connection_string_value: $(db_connection_string)                          
+            TF_VAR_connection_string_value: $(db_connection_string)
+            TF_VAR_ad_client_id: $(client_id)
+            TF_VAR_ad_client_secret: $(client_secret)             
 
         - script: |
             export TF_IN_AUTOMATION=true
@@ -58,7 +60,9 @@ stages:
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
             TF_VAR_sql_admin_password: $(sql_admin_password)
-            TF_VAR_connection_string_value: $(db_connection_string)                                  
+            TF_VAR_connection_string_value: $(db_connection_string)
+            TF_VAR_ad_client_id: $(client_id)
+            TF_VAR_ad_client_secret: $(client_secret)                                             
 
 - stage: TF_APPLY
   pool: 
@@ -95,6 +99,8 @@ stages:
             TF_VAR_sql_admin_username: $(sql_admin_username)
             TF_VAR_sql_admin_password: $(sql_admin_password)
             TF_VAR_connection_string_value: $(db_connection_string)             
+            TF_VAR_ad_client_id: $(client_id)
+            TF_VAR_ad_client_secret: $(client_secret) 
 
         - script: |
             export TF_IN_AUTOMATION=true
@@ -114,4 +120,6 @@ stages:
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
             TF_VAR_sql_admin_password: $(sql_admin_password)
-            TF_VAR_connection_string_value: $(db_connection_string)                
+            TF_VAR_connection_string_value: $(db_connection_string)
+            TF_VAR_ad_client_id: $(client_id)
+            TF_VAR_ad_client_secret: $(client_secret)                            
