--- a/infrastructure/bcdr-pipeline.yml
+++ b/infrastructure/bcdr-pipeline.yml
@@ -1,5 +1,4 @@
-trigger:
-  - platform-deploy
+trigger: none
 
 variables:
 - group: SKEDDA-DOTNET
@@ -13,7 +12,6 @@ stages:
     - job: Infrastructure_Terraform_Plan
       displayName: "Infrastructure Terraform Plan"
       steps:
-
         - script: |
             cd $(Build.Repository.LocalPath)/infrastructure
             pwd
@@ -38,7 +36,8 @@ stages:
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
             TF_VAR_sql_admin_password: $(sql_admin_password)
-            TF_VAR_connection_string_value: $(db_connection_string)          
+            TF_VAR_connection_string_value: $(db_connection_string)
+            TF_VAR_creation_source_database_id: $(creation_source_db_id)         
 
         - script: |
             export TF_IN_AUTOMATION=true
@@ -46,7 +45,7 @@ stages:
             ./terraform validate
             ./terraform init
             ./terraform plan -out=terraform.tfplan \
-            -var-file="terraform.tfvars"
+            -var-file="bcdr.tfvars"
           displayName: Terraform Plan
           env:
             ARM_TENANT_ID: 58a82b7b-bd43-4950-8699-bbaa5d0ff52b
@@ -58,7 +57,8 @@ stages:
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
             TF_VAR_sql_admin_password: $(sql_admin_password)
-            TF_VAR_connection_string_value: $(db_connection_string)                                          
+            TF_VAR_connection_string_value: $(db_connection_string)
+            TF_VAR_creation_source_database_id: $(creation_source_db_id)                                                       
 
 - stage: TF_APPLY
   pool: 
@@ -94,7 +94,8 @@ stages:
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
             TF_VAR_sql_admin_password: $(sql_admin_password)
-            TF_VAR_connection_string_value: $(db_connection_string)             
+            TF_VAR_connection_string_value: $(db_connection_string)
+            TF_VAR_creation_source_database_id: $(creation_source_db_id)                          
 
         - script: |
             export TF_IN_AUTOMATION=true
@@ -102,7 +103,7 @@ stages:
             ./terraform validate
             ./terraform init
             ./terraform apply -auto-approve \
-            -var-file="terraform.tfvars"
+            -var-file="bcdr.tfvars"
           displayName: Terraform Apply
           env:
             ARM_TENANT_ID: 58a82b7b-bd43-4950-8699-bbaa5d0ff52b
@@ -114,4 +115,23 @@ stages:
             AZDO_PERSONAL_ACCESS_TOKEN: $(pat_token)
             TF_VAR_sql_admin_username: $(sql_admin_username)
             TF_VAR_sql_admin_password: $(sql_admin_password)
-            TF_VAR_connection_string_value: $(db_connection_string)                         
+            TF_VAR_connection_string_value: $(db_connection_string)
+            TF_VAR_creation_source_database_id: $(creation_source_db_id) 
+
+- stage: APP_DEPLOY
+  pool: 
+    vmImage: ubuntu-latest
+  dependsOn: [TF_APPLY]
+  condition: succeeded('TF_APPLY')
+  jobs:
+    - job: App_Deployment
+      displayName: "App deployment"
+      timeoutInMinutes: 150
+      steps:
+        - task: AzureWebApp@1
+          inputs:
+            azureSubscription: 'skedda-app'
+            appType: 'webAppLinux'
+            appName: 'ikedotnetapp01'
+            package: '$(System.DefaultWorkingDirectory)/app/aspnetcoreappv4.zip'
+            startupCommand: 'dotnet bin/$(buildConfiguration)/net7.0/aspnetcoreapp.dll'                                                
