--- a/app/app-deploy-pipeline.yml
+++ b/app/app-deploy-pipeline.yml
@@ -2,7 +2,7 @@
 resources:
   pipelines:
   - pipeline: release-pipeline # Name of the pipeline resource.
-    source: platform-pipeline # The name of the pipeline referenced by this pipeline resource.
+    source: platform-release-pipeline # The name of the pipeline referenced by this pipeline resource.
     trigger: true
 
 variables:
