modified tf code and app deploy stage in pipeline

--- a/infrastructure/bcdr-pipeline.yml
+++ b/infrastructure/bcdr-pipeline.yml
@@ -134,4 +134,6 @@ stages:
             appType: 'webAppLinux'
             appName: 'ikedotnetapp01'
             package: '$(System.DefaultWorkingDirectory)/app/aspnetcoreappv4.zip'
-            startupCommand: 'dotnet bin/$(buildConfiguration)/net7.0/aspnetcoreapp.dll'                                                
+            startupCommand: 'dotnet bin/$(buildConfiguration)/net7.0/aspnetcoreapp.dll'
+            appSettings:
+              -DbConnectionString "$(db_connection_string)"                                              
