--- a/infrastructure/dr-infr-destroy-pipeline.yml
+++ b/infrastructure/dr-infr-destroy-pipeline.yml
@@ -45,7 +45,7 @@ stages:
             cd $(Build.Repository.LocalPath)/infrastructure
             ./terraform validate
             ./terraform init
-            ./terraform destroy \
+            ./terraform destroy -auto-approve \
             -var-file="bcdr.tfvars"
           displayName: Terraform Destroy
           env:
