updated tf code for disaster recovery

--- a/infrastructure/dr-infr-destroy-pipeline.yml
+++ b/infrastructure/dr-infr-destroy-pipeline.yml
@@ -27,7 +27,7 @@ stages:
             ./terraform init
           displayName: Terraform Initialize
           env:
-            ARM_TENANT_ID: 58a82b7b-bd43-4950-8699-bbaa5d0ff52b
+            ARM_TENANT_ID: $(tenant_id)
             ARM_SUBSCRIPTION_ID: $(subscription_id)
             ARM_CLIENT_ID: $(client_id)
             ARM_CLIENT_SECRET: $(client_secret)
@@ -49,7 +49,7 @@ stages:
             -var-file="bcdr.tfvars"
           displayName: Terraform Destroy
           env:
-            ARM_TENANT_ID: 58a82b7b-bd43-4950-8699-bbaa5d0ff52b
+            ARM_TENANT_ID: $(tenant_id)
             ARM_SUBSCRIPTION_ID: $(subscription_id)
             ARM_CLIENT_ID: $(client_id)
             ARM_CLIENT_SECRET: $(client_secret)
